parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> s
Rule 2     code -> code ; s
Rule 3     ciclo -> for var [ e ellipsis e ] com_list ; endfor
Rule 4     func -> fun var ( args ) com_list ; endfun
Rule 5     condicao -> if e then com_list else com_list endif
Rule 6     comando -> e
Rule 7     comando -> ciclo
Rule 8     comando -> condicao
Rule 9     comando -> var assign e
Rule 10    comando -> say e_list
Rule 11    s -> func
Rule 12    s -> comando
Rule 13    e_list -> e
Rule 14    e_list -> e_list , e
Rule 15    n -> nr
Rule 16    n -> - e
Rule 17    n -> e + e
Rule 18    n -> e - e
Rule 19    n -> e * e
Rule 20    n -> e / e
Rule 21    n -> e < e
Rule 22    n -> e > e
Rule 23    b -> f
Rule 24    b -> e or e
Rule 25    b -> e and e
Rule 26    b -> e xor e
Rule 27    f -> true
Rule 28    f -> false
Rule 29    f -> not f
Rule 30    e -> var
Rule 31    e -> ( e )
Rule 32    e -> b
Rule 33    e -> n
Rule 34    e -> string
Rule 35    e -> var ( e_list )
Rule 36    e -> var ( )
Rule 37    com_list -> comando
Rule 38    com_list -> com_list ; comando
Rule 39    var_list -> var
Rule 40    var_list -> var_list , var
Rule 41    args -> <empty>
Rule 42    args -> var_list

Terminals, with rules where they appear

(                    : 4 31 35 36
)                    : 4 31 35 36
*                    : 19
+                    : 17
,                    : 14 40
-                    : 16 18
/                    : 20
;                    : 2 3 4 38
<                    : 21
>                    : 22
[                    : 3
]                    : 3
and                  : 25
assign               : 9
ellipsis             : 3
else                 : 5
endfor               : 3
endfun               : 4
endif                : 5
error                : 
false                : 28
for                  : 3
fun                  : 4
if                   : 5
not                  : 29
nr                   : 15
or                   : 24
say                  : 10
string               : 34
then                 : 5
true                 : 27
var                  : 3 4 9 30 35 36 39 40
xor                  : 26

Nonterminals, with rules where they appear

args                 : 4
b                    : 32
ciclo                : 7
code                 : 2 0
com_list             : 3 4 5 5 38
comando              : 12 37 38
condicao             : 8
e                    : 3 3 5 6 9 13 14 16 17 17 18 18 19 19 20 20 21 21 22 22 24 24 25 25 26 26 31
e_list               : 10 14 35
f                    : 23 29
func                 : 11
n                    : 33
s                    : 1 2
var_list             : 40 42

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . s
    (2) code -> . code ; s
    (11) s -> . func
    (12) s -> . comando
    (4) func -> . fun var ( args ) com_list ; endfun
    (6) comando -> . e
    (7) comando -> . ciclo
    (8) comando -> . condicao
    (9) comando -> . var assign e
    (10) comando -> . say e_list
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (3) ciclo -> . for var [ e ellipsis e ] com_list ; endfor
    (5) condicao -> . if e then com_list else com_list endif
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    fun             shift and go to state 5
    var             shift and go to state 6
    say             shift and go to state 11
    (               shift and go to state 7
    string          shift and go to state 14
    for             shift and go to state 15
    if              shift and go to state 16
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    code                           shift and go to state 1
    s                              shift and go to state 2
    func                           shift and go to state 3
    comando                        shift and go to state 4
    e                              shift and go to state 8
    ciclo                          shift and go to state 9
    condicao                       shift and go to state 10
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 1

    (0) S' -> code .
    (2) code -> code . ; s

    ;               shift and go to state 23


state 2

    (1) code -> s .

    ;               reduce using rule 1 (code -> s .)
    $end            reduce using rule 1 (code -> s .)


state 3

    (11) s -> func .

    ;               reduce using rule 11 (s -> func .)
    $end            reduce using rule 11 (s -> func .)


state 4

    (12) s -> comando .

    ;               reduce using rule 12 (s -> comando .)
    $end            reduce using rule 12 (s -> comando .)


state 5

    (4) func -> fun . var ( args ) com_list ; endfun

    var             shift and go to state 24


state 6

    (9) comando -> var . assign e
    (30) e -> var .
    (35) e -> var . ( e_list )
    (36) e -> var . ( )

    assign          shift and go to state 25
    or              reduce using rule 30 (e -> var .)
    and             reduce using rule 30 (e -> var .)
    xor             reduce using rule 30 (e -> var .)
    +               reduce using rule 30 (e -> var .)
    -               reduce using rule 30 (e -> var .)
    *               reduce using rule 30 (e -> var .)
    /               reduce using rule 30 (e -> var .)
    <               reduce using rule 30 (e -> var .)
    >               reduce using rule 30 (e -> var .)
    ;               reduce using rule 30 (e -> var .)
    $end            reduce using rule 30 (e -> var .)
    else            reduce using rule 30 (e -> var .)
    endif           reduce using rule 30 (e -> var .)
    (               shift and go to state 26


state 7

    (31) e -> ( . e )
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 27
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 8

    (6) comando -> e .
    (24) b -> e . or e
    (25) b -> e . and e
    (26) b -> e . xor e
    (17) n -> e . + e
    (18) n -> e . - e
    (19) n -> e . * e
    (20) n -> e . / e
    (21) n -> e . < e
    (22) n -> e . > e

    ;               reduce using rule 6 (comando -> e .)
    $end            reduce using rule 6 (comando -> e .)
    else            reduce using rule 6 (comando -> e .)
    endif           reduce using rule 6 (comando -> e .)
    or              shift and go to state 29
    and             shift and go to state 30
    xor             shift and go to state 31
    +               shift and go to state 32
    -               shift and go to state 33
    *               shift and go to state 34
    /               shift and go to state 35
    <               shift and go to state 36
    >               shift and go to state 37


state 9

    (7) comando -> ciclo .

    ;               reduce using rule 7 (comando -> ciclo .)
    $end            reduce using rule 7 (comando -> ciclo .)
    else            reduce using rule 7 (comando -> ciclo .)
    endif           reduce using rule 7 (comando -> ciclo .)


state 10

    (8) comando -> condicao .

    ;               reduce using rule 8 (comando -> condicao .)
    $end            reduce using rule 8 (comando -> condicao .)
    else            reduce using rule 8 (comando -> condicao .)
    endif           reduce using rule 8 (comando -> condicao .)


state 11

    (10) comando -> say . e_list
    (13) e_list -> . e
    (14) e_list -> . e_list , e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e_list                         shift and go to state 38
    e                              shift and go to state 39
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 12

    (32) e -> b .

    or              reduce using rule 32 (e -> b .)
    and             reduce using rule 32 (e -> b .)
    xor             reduce using rule 32 (e -> b .)
    +               reduce using rule 32 (e -> b .)
    -               reduce using rule 32 (e -> b .)
    *               reduce using rule 32 (e -> b .)
    /               reduce using rule 32 (e -> b .)
    <               reduce using rule 32 (e -> b .)
    >               reduce using rule 32 (e -> b .)
    ;               reduce using rule 32 (e -> b .)
    $end            reduce using rule 32 (e -> b .)
    )               reduce using rule 32 (e -> b .)
    ,               reduce using rule 32 (e -> b .)
    else            reduce using rule 32 (e -> b .)
    endif           reduce using rule 32 (e -> b .)
    then            reduce using rule 32 (e -> b .)
    ellipsis        reduce using rule 32 (e -> b .)
    ]               reduce using rule 32 (e -> b .)


state 13

    (33) e -> n .

    or              reduce using rule 33 (e -> n .)
    and             reduce using rule 33 (e -> n .)
    xor             reduce using rule 33 (e -> n .)
    +               reduce using rule 33 (e -> n .)
    -               reduce using rule 33 (e -> n .)
    *               reduce using rule 33 (e -> n .)
    /               reduce using rule 33 (e -> n .)
    <               reduce using rule 33 (e -> n .)
    >               reduce using rule 33 (e -> n .)
    ;               reduce using rule 33 (e -> n .)
    $end            reduce using rule 33 (e -> n .)
    )               reduce using rule 33 (e -> n .)
    ,               reduce using rule 33 (e -> n .)
    else            reduce using rule 33 (e -> n .)
    endif           reduce using rule 33 (e -> n .)
    then            reduce using rule 33 (e -> n .)
    ellipsis        reduce using rule 33 (e -> n .)
    ]               reduce using rule 33 (e -> n .)


state 14

    (34) e -> string .

    or              reduce using rule 34 (e -> string .)
    and             reduce using rule 34 (e -> string .)
    xor             reduce using rule 34 (e -> string .)
    +               reduce using rule 34 (e -> string .)
    -               reduce using rule 34 (e -> string .)
    *               reduce using rule 34 (e -> string .)
    /               reduce using rule 34 (e -> string .)
    <               reduce using rule 34 (e -> string .)
    >               reduce using rule 34 (e -> string .)
    ;               reduce using rule 34 (e -> string .)
    $end            reduce using rule 34 (e -> string .)
    )               reduce using rule 34 (e -> string .)
    ,               reduce using rule 34 (e -> string .)
    else            reduce using rule 34 (e -> string .)
    endif           reduce using rule 34 (e -> string .)
    then            reduce using rule 34 (e -> string .)
    ellipsis        reduce using rule 34 (e -> string .)
    ]               reduce using rule 34 (e -> string .)


state 15

    (3) ciclo -> for . var [ e ellipsis e ] com_list ; endfor

    var             shift and go to state 40


state 16

    (5) condicao -> if . e then com_list else com_list endif
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 41
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 17

    (23) b -> f .

    or              reduce using rule 23 (b -> f .)
    and             reduce using rule 23 (b -> f .)
    xor             reduce using rule 23 (b -> f .)
    +               reduce using rule 23 (b -> f .)
    -               reduce using rule 23 (b -> f .)
    *               reduce using rule 23 (b -> f .)
    /               reduce using rule 23 (b -> f .)
    <               reduce using rule 23 (b -> f .)
    >               reduce using rule 23 (b -> f .)
    ;               reduce using rule 23 (b -> f .)
    $end            reduce using rule 23 (b -> f .)
    )               reduce using rule 23 (b -> f .)
    ,               reduce using rule 23 (b -> f .)
    else            reduce using rule 23 (b -> f .)
    endif           reduce using rule 23 (b -> f .)
    then            reduce using rule 23 (b -> f .)
    ellipsis        reduce using rule 23 (b -> f .)
    ]               reduce using rule 23 (b -> f .)


state 18

    (15) n -> nr .

    or              reduce using rule 15 (n -> nr .)
    and             reduce using rule 15 (n -> nr .)
    xor             reduce using rule 15 (n -> nr .)
    +               reduce using rule 15 (n -> nr .)
    -               reduce using rule 15 (n -> nr .)
    *               reduce using rule 15 (n -> nr .)
    /               reduce using rule 15 (n -> nr .)
    <               reduce using rule 15 (n -> nr .)
    >               reduce using rule 15 (n -> nr .)
    ;               reduce using rule 15 (n -> nr .)
    $end            reduce using rule 15 (n -> nr .)
    )               reduce using rule 15 (n -> nr .)
    ,               reduce using rule 15 (n -> nr .)
    else            reduce using rule 15 (n -> nr .)
    endif           reduce using rule 15 (n -> nr .)
    then            reduce using rule 15 (n -> nr .)
    ellipsis        reduce using rule 15 (n -> nr .)
    ]               reduce using rule 15 (n -> nr .)


state 19

    (16) n -> - . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 42
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 20

    (27) f -> true .

    or              reduce using rule 27 (f -> true .)
    and             reduce using rule 27 (f -> true .)
    xor             reduce using rule 27 (f -> true .)
    +               reduce using rule 27 (f -> true .)
    -               reduce using rule 27 (f -> true .)
    *               reduce using rule 27 (f -> true .)
    /               reduce using rule 27 (f -> true .)
    <               reduce using rule 27 (f -> true .)
    >               reduce using rule 27 (f -> true .)
    ;               reduce using rule 27 (f -> true .)
    $end            reduce using rule 27 (f -> true .)
    )               reduce using rule 27 (f -> true .)
    ,               reduce using rule 27 (f -> true .)
    else            reduce using rule 27 (f -> true .)
    endif           reduce using rule 27 (f -> true .)
    then            reduce using rule 27 (f -> true .)
    ellipsis        reduce using rule 27 (f -> true .)
    ]               reduce using rule 27 (f -> true .)


state 21

    (28) f -> false .

    or              reduce using rule 28 (f -> false .)
    and             reduce using rule 28 (f -> false .)
    xor             reduce using rule 28 (f -> false .)
    +               reduce using rule 28 (f -> false .)
    -               reduce using rule 28 (f -> false .)
    *               reduce using rule 28 (f -> false .)
    /               reduce using rule 28 (f -> false .)
    <               reduce using rule 28 (f -> false .)
    >               reduce using rule 28 (f -> false .)
    ;               reduce using rule 28 (f -> false .)
    $end            reduce using rule 28 (f -> false .)
    )               reduce using rule 28 (f -> false .)
    ,               reduce using rule 28 (f -> false .)
    else            reduce using rule 28 (f -> false .)
    endif           reduce using rule 28 (f -> false .)
    then            reduce using rule 28 (f -> false .)
    ellipsis        reduce using rule 28 (f -> false .)
    ]               reduce using rule 28 (f -> false .)


state 22

    (29) f -> not . f
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    f                              shift and go to state 43

state 23

    (2) code -> code ; . s
    (11) s -> . func
    (12) s -> . comando
    (4) func -> . fun var ( args ) com_list ; endfun
    (6) comando -> . e
    (7) comando -> . ciclo
    (8) comando -> . condicao
    (9) comando -> . var assign e
    (10) comando -> . say e_list
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (3) ciclo -> . for var [ e ellipsis e ] com_list ; endfor
    (5) condicao -> . if e then com_list else com_list endif
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    fun             shift and go to state 5
    var             shift and go to state 6
    say             shift and go to state 11
    (               shift and go to state 7
    string          shift and go to state 14
    for             shift and go to state 15
    if              shift and go to state 16
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    s                              shift and go to state 44
    func                           shift and go to state 3
    comando                        shift and go to state 4
    e                              shift and go to state 8
    ciclo                          shift and go to state 9
    condicao                       shift and go to state 10
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 24

    (4) func -> fun var . ( args ) com_list ; endfun

    (               shift and go to state 45


state 25

    (9) comando -> var assign . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 46
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 26

    (35) e -> var ( . e_list )
    (36) e -> var ( . )
    (13) e_list -> . e
    (14) e_list -> . e_list , e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    )               shift and go to state 48
    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e_list                         shift and go to state 47
    e                              shift and go to state 39
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 27

    (31) e -> ( e . )
    (24) b -> e . or e
    (25) b -> e . and e
    (26) b -> e . xor e
    (17) n -> e . + e
    (18) n -> e . - e
    (19) n -> e . * e
    (20) n -> e . / e
    (21) n -> e . < e
    (22) n -> e . > e

    )               shift and go to state 49
    or              shift and go to state 29
    and             shift and go to state 30
    xor             shift and go to state 31
    +               shift and go to state 32
    -               shift and go to state 33
    *               shift and go to state 34
    /               shift and go to state 35
    <               shift and go to state 36
    >               shift and go to state 37


state 28

    (30) e -> var .
    (35) e -> var . ( e_list )
    (36) e -> var . ( )

    )               reduce using rule 30 (e -> var .)
    or              reduce using rule 30 (e -> var .)
    and             reduce using rule 30 (e -> var .)
    xor             reduce using rule 30 (e -> var .)
    +               reduce using rule 30 (e -> var .)
    -               reduce using rule 30 (e -> var .)
    *               reduce using rule 30 (e -> var .)
    /               reduce using rule 30 (e -> var .)
    <               reduce using rule 30 (e -> var .)
    >               reduce using rule 30 (e -> var .)
    ,               reduce using rule 30 (e -> var .)
    ;               reduce using rule 30 (e -> var .)
    $end            reduce using rule 30 (e -> var .)
    else            reduce using rule 30 (e -> var .)
    endif           reduce using rule 30 (e -> var .)
    then            reduce using rule 30 (e -> var .)
    ellipsis        reduce using rule 30 (e -> var .)
    ]               reduce using rule 30 (e -> var .)
    (               shift and go to state 26


state 29

    (24) b -> e or . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 50
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 30

    (25) b -> e and . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 51
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 31

    (26) b -> e xor . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 52
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 32

    (17) n -> e + . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 53
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 33

    (18) n -> e - . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 54
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 34

    (19) n -> e * . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f

    var             shift and go to state 28
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 18
    -               shift and go to state 19
    true            shift and go to state 20
    false           shift and go to state 21
    not             shift and go to state 22

    e                              shift and go to state 55
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 17

state 35

    (20) n -> e / . e
    (30) e -> . var
    (31) e -> . ( e )
    (32) e -> . b
    (33) e -> . n
    (34) e -> . string
    (35) e -> . var ( e_list )
    (36) e -> . var ( )
    (23) b -> . f
    (24) b -> . e or e
    (25) b -> . e and e
    (26) b -> . e xor e
    (15) n -> . nr
    (16) n -> . - e
    (17) n -> . e + e
    (18) n -> . e - e
    (19) n -> . e * e
    (20) n -> . e / e
    (21) n -> . e < e
    (22) n -> . e > e
    (27) f -> . true
    (28) f -> . false
    (29) f -> . not f
